--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">Homework4</string>
+    <string name="an_error_occurred_please_try_again_later">an error occurred please try again later</string>
+    <string name="reload">Reload</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="author">Author</string>
+    <string name="image_url">Image URL</string>
+    <string name="keywords">Keywords</string>
+    <string name="publication_date">Publication Date</string>
+    <string name="settings">Settings</string>
+    <string name="display_images">Display Images</string>
+    <string name="images_are_displayed">Images are displayed</string>
+    <string name="images_are_not_displayed">Images are not displayed</string>
+    <string name="key_display_images">display_images</string>
+    <string name="default_value">true</string>
 </resources>
